--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Location Something",
+  "name": "Locations",
   "version": "0.1",
   "background": {
     "scripts": ["background.js"]
